Fix jump in sticky nav.

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -17,11 +17,11 @@
 
   // NAV default styles
 
-  .l-navigation-shortnav-container{
-    box-shadow:none;
+  .l-navigation-shortnav-container {
+    box-shadow: none;
   }
 
-  #navigation{
+  #navigation {
     width: 100%;
     background-color: white;
     z-index: 1;
@@ -37,19 +37,28 @@
     border-bottom: 1px solid #e8e8e8;
   }
 
-  nav ul{
+  // Placeholder
+  .navigation-placeholder {
+    display: none;
+
+    &.sticky-on {
+      display: block;
+    }
+  }
+
+  nav ul {
     width: 100%;
     display: block;
     text-align: center;
     margin: 60px auto 20px auto;
   }
 
-  .sticky nav ul{
+  .sticky nav ul {
     max-width: 900px;
     margin: 0px auto;
   }
 
-  nav ul li.main-nav{
+  nav ul li.main-nav {
     background-color: white;
     text-transform: uppercase;
     font-size: 0.75em;
@@ -125,7 +134,7 @@
     padding: 5px 0px 5px 0px;
   }
 
-  nav select option.group{
+  nav select option.group {
     padding-bottom: 7px;
   }
 
